Removed Warnings from memoranda/ui/htmleditor/HTMLEditor.java